add:MyLinkedQueue